Wed May 19 19:51:10 EDT 2004	JK Lowden <jklowden@schemamania.org>
	* src/ctlib/cs.c add milliseconds to cs_dt_crack().
	
Wed May 19 09:07:23 EDT 2004	JK Lowden <jklowden@schemamania.org>
	* src/tds/convert.c convert double-precision to 16 places, not 15.
	
Tue May 18 17:04:57 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/blk.c: remove some warnings

Tue May 18 10:07:46 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* include/ctlib.h src/ctlib/blk.c src/ctlib/unittests/blk_in.c:
	* src/ctlib/unittests/blk_out.c src/ctlib/unittests/cancel.c:
	- remove some warnings
	- move declaration of no-static function in ctlib.h

Mon May 17 17:15:15 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* include/ctlib.h include/tds.h src/ctlib/blk.c:
	* src/ctlib/ct.c src/ctlib/unittests/Makefile.am:
	* src/dblib/dblib.c src/tds/mem.c src/tds/token.c:
	* src/ctlib/unittests/blk_in.h(added):
	* src/ctlib/unittests/blk_in.c(added):
	* src/ctlib/unittests/blk_out.c(added):
	- applied Bill Thompson patch for bulk copy in CTLib

Sun May 16 17:31:35 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/odbc/odbc.c src/odbc/odbc_checks.c:
	- fix some memory leaks (SQLDisconnect didn't free statements)
	* src/dblib/dblib.c: converted to unix format

Fri May 14 19:17:38 EDT 2004	JK Lowden <jklowden@schemamania.org>
	* samples/mssql.php added, courtesy of Sven Goldt

Fri May 14 10:47:19 EDT 2004	JK Lowden <jklowden@schemamania.org>
	* doc/Makefile.am 
	- s/-L/-h/g: use more standard -h to test for links. 

Wed May 12 17:17:49 EDT 2004	JK Lowden <jklowden@schemamania.org>
	* src/tds/convert.c dd-mmm-00 yields 2000 instead of 1900

Wed May 12 21:11:53 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c src/odbc/prepare_query.c:
	* src/odbc/prepare_query.h src/odbc/sql2tds.c:
	* src/odbc/sql2tds.h src/odbc/unittests/prepare_results.c:
	* src/tds/query.c:
	- continue to implement getting information after SQLPrepare
